--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="fotos/introimg2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="fotos/introimg.jpg" class="d-block w-100" alt="...">
+            <img src="fotos/introimg3.jpg" class="d-block w-100" alt="...">
         </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
