--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 </head>
 <body class="body">
     <header>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+                </form>
+            </div>
+        </nav>
         <h1 class="tituloprincipal"> 
             <a href="index.html" class="tituloprincipal"> CERÁMICA DECO </a>
         </h1>
