--- a/productos.html
+++ b/productos.html
@@ -68,11 +68,11 @@
                 <li class="page-item disabled">
                     <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Anterior</a>
                 </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="productos.html">1</a></li>
+                <li class="page-item"><a class="page-link" href="productos.html">2</a></li>
+                <li class="page-item"><a class="page-link" href="productos.html">3</a></li>
                 <li class="page-item">
-                    <a class="page-link" href="#">Próximo</a>
+                    <a class="page-link" href="productos.html">Próximo</a>
                 </li>
             </ul>
         </nav>
