cambios en general

--- a/contacto.html
+++ b/contacto.html
@@ -27,8 +27,8 @@
             <a class="tituloprincipal" href="index.html"> CERÁMICA DECO </a>
         </h1>
     </header>
-    <nav class="nav">
-        <div class="container">
+    <nav class="nav" class="navbar navbar-expand-lg ">
+        <div class="container" class="collapse navbar-collapse"id="navbarNav" >
             <div class="row">
                 <div class="col-lg-12">
                     <ul>
@@ -64,11 +64,11 @@
                 </div>
             </div>
             <div class="col-lg-5 col-xs-12" class="contacto">
-                <div> <h3> CONTACTO </h3> </div>
+                <div> <h3 id="subtitulo"> CONTACTO </h3> </div>
                 <div> Mail: Ceramicasdeco@gmail.com </div>
                 <div> Teléfono: 1138667852 </div>
                 <div> Instagram: Ceramicas.deco </div>
-            </div>         
+        </div>         
     </section>
     <footer>
         <div> 
