--- a/contacto.html
+++ b/contacto.html
@@ -27,8 +27,8 @@
             <a class="tituloprincipal" href="index.html"> CERÁMICA DECO </a>
         </h1>
     </header>
-    <nav class="nav" class="navbar navbar-expand-lg ">
-        <div class="container" class="collapse navbar-collapse"id="navbarNav" >
+    <nav class="nav" >
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <ul>
