--- a/index.html
+++ b/index.html
@@ -85,16 +85,20 @@
         </article>
     </section>
     <footer >
-        <div> 
-            <div> <a  class="footera" href="contacto.html"> CONTACTO: </a>  </div> 
-            <div> Mail: ceramicasdeco@gmail.com </div>
-            <div> Teléfono: 1138667852 </div>
-            <div> Instagram: ceramicas.deco </div>
-        </div>
-        <div>
-            <div><a  class="footera" href="contacto.html"> DIRECCIÓN: </a>   </div> 
-            <div> Showroom: Av. Santa Fe 530 </div>
-        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-xs-6"> 
+                    <div> <a class="footera" href="contacto.html"> CONTACTO </a>  </div> 
+                    <div> Mail: Ceramicasdeco@gmail.com </div>
+                    <div> Teléfono: 1138667852 </div>
+                    <div> Instagram: Ceramicas.deco </div>
+                </div>
+                <div class="col-lg-6 col-xs-6">
+                    <div><a class="footera" href="contacto.html"> DIRECCIÓN </a>   </div> 
+                    <div> Showroom: Av. Santa Fe 530 </div>
+                </div>           
+            </div>
+        </div>       
     </footer>
 </body>
 </html>
