--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
-                <form class="d-flex">
+                <form class="d-flex ">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn btn-outline-secondary" type="submit">Buscar</button>
                 </form>
@@ -44,7 +44,7 @@
     </nav>
     <section class="container">
         <div class="row"> 
-            <div class="col-lg-6 col-xs-12">
+            <div class="col-lg-6 col-xs-10">
                 <div id="form-div">
                     <form class="form">
                             <p class="name">
@@ -68,19 +68,24 @@
                 <div> Mail: Ceramicasdeco@gmail.com </div>
                 <div> Teléfono: 1138667852 </div>
                 <div> Instagram: Ceramicas.deco </div>
+            </div>
         </div>         
     </section>
-    <footer>
-        <div> 
-            <div> <a class="footera" href="contacto.html"> CONTACTO: </a>  </div> 
-            <div> Mail: Ceramicasdeco@gmail.com </div>
-            <div> Teléfono: 1138667852 </div>
-            <div> Instagram: Ceramicas.deco </div>
-        </div>
-        <div>
-            <div><a class="footera" href="contacto.html"> DIRECCIÓN: </a>   </div> 
-            <div> Showroom: Av. Santa Fe 530 </div>
-        </div>
+    <footer >
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-xs-6"> 
+                    <div> <a class="footera" href="contacto.html"> CONTACTO </a>  </div> 
+                    <div> Mail: Ceramicasdeco@gmail.com </div>
+                    <div> Teléfono: 1138667852 </div>
+                    <div> Instagram: Ceramicas.deco </div>
+                </div>
+                <div class="col-lg-6 col-xs-6">
+                    <div><a class="footera" href="contacto.html"> DIRECCIÓN </a>   </div> 
+                    <div> Showroom: Av. Santa Fe 530 </div>
+                </div>           
+            </div>
+        </div>       
     </footer>
 </body>
 </html>
