cambios en gral

--- a/conocenos.html
+++ b/conocenos.html
@@ -44,31 +44,28 @@
     </nav>
     <section>
         <div class="contenedorconocenos">
-            <div class="fotoconocenos">
-            </div>
-            <div class="textoconocenos">
-                <p> 
-                    Mi nombre es Sandra, soy mama de dos hijos. Este proyecto comenzo por hobbie. 
-                    Desde chica que me gusta hacer cosas con las manos. Pase de las esculturas a la pintura y 
-                    hace unos 3 anos que descubri la ceramica. Una vez que empece con esto nunca pare, lo ame. 
-                    Me encanta crear, siempre estoy buscando hacer cosas distintas, que se salgan un poco de lo normal 
-                    Es por esta razon que mis piezas son unicas. No hay una igual a la otra. 
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                </p>
-                <p>  
-                    Quo veniam nisi expedita quasi temporibus! Adipisci facilis est autem, 
-                    Culpa, quo veniam nisi expedita quasi temporibus! Adipisci facilis est autem, 
-                    provident omnis nulla eaque voluptatum assumenda iure, laboriosam corporis laborum quibusdam. 
-                </p>
-                <p>
-                    quo veniam nisi expedita quasi temporibus! Adipisci facilis est autem, 
-                    provident omnis nulla eaque voluptatum assumenda iure, laboriosam corporis laborum quibusdam.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Culpa, quo veniam nisi expedita quasi temporibus! Adipisci facilis est autem, 
-                    provident omnis nulla eaque voluptatum assumenda iure, laboriosam corporis laborum quibusdam.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                </p>
-            </div>       
+                <div class="fotoconocenos" >
+                    <img src="fotos/fotoconocenos.jpg" alt="img1" class="fotoconocenos" >
+                </div>
+                <div class="textoconocenos" >
+                    <p> 
+                        Sandra Lima (58). Durante la secundaria, Sandra cursaba un taller en donde enseguida quedó cautivada 
+                        y sorprendida de las formas que lograba con la arcilla a través del torno.
+                    </p>
+                    <p>
+                        Con el transcurrir del tiempo comenzó a sentir que el proceso de creación en la cerámica tenía 
+                        mucha correlación con la vida misma. Esta conexión nos remite a los cinco primeros pasos de la alfarería, 
+                        centrar, agujerear, abrir, levantar y darle forma a la arcilla, “De algún modo vamos moldeando nuestra vida,
+                        amasamos cada momento, nos centramos, nos abrimos a cosas nuevas, nos levantamos ante situaciones que
+                        se nos presentan y terminamos dándole forma a las cosas”, afirma Sandra.
+                    </p>
+                    <p>
+                        En estos últimos años trabajó arduamente para que en el presente se pudiera formar un nuevo concepto 
+                        de negocio donde se fusionen todas sus pasiones, la alfarería, la decoración y la gastronomía, logrando 
+                        así un espacio donde podés vivir el MUNDO CERAMICA, aprendiendo alfarería y disfrutando de los sabores
+                        en la vajilla que el mismo diseña y comercializa.
+                    </p>
+                </div>       
         </div>
     </section>
     <footer >
