--- a/procesocreativo.html
+++ b/procesocreativo.html
@@ -10,13 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="estilo.css">
     <link rel= "stylesheet" href="css/estilos.css">
 </head>
 <body class="body">
     <header>
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
+        <nav class="navbar navbar-light bg-light ">
+            <div class="container-fluid justify-content-end">
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn btn-outline-secondary" type="submit">Buscar</button>
@@ -43,60 +42,62 @@
         </div>
     </nav>
     <section>
-        <article class="articulo1">
-            <div class="tituloart1"> 
-                <h2 class="titulos"> 
-                    CERÁMICA
-                </h2>
+        <div class="container"> 
+                <article class="row">
+                    <div > 
+                        <h2 class="titulos"> 
+                            CERÁMICA
+                        </h2>
+                    </div>
+                    <div class="col-md-6 col-sm-12"> 
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/IGWbAp4XMic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-md-6 col-sm-12" >
+                        <p class="textoart">
+                            La cerámica, es el arte de fabricar vasijas​ y otros objetos de arcilla u otro 
+                            material cerámico por acción del calor, es decir cocida a una temperatura superior a los 900 grados.​
+                        </p>
+                        <p class="textoart">    
+                            1. Extraer arcilla y prepararla 2. Mezclar de a pocos la arcilla en un recipiente con agua 
+                            3. Cuando la arcilla se haya mezclado con el agua y obtengamos una especie de barro se aplica en 
+                            una pila para que así se filtre y se evapore el agua. 4. Ponemos la arcilla en un molde y dejamos enfriar. 
+                            5. uan vez seca la arcilla se saca cuidadosamente del molde. Las piezas no salen perfectas de estos con lo cual a continuacion
+                            hay que lijarlas. 5. Se pintan con materiales especiales 6. Por ultimo se llevan a un horno especial para cocerlas.
+                        </p>
+                    </div> 
             </div>
-            <div > 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/IGWbAp4XMic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="textoart1">
-                <p>
-                    La cerámica, es el arte de fabricar vasijas​ y otros objetos de arcilla u otro 
-                    material cerámico por acción del calor, es decir cocida a una temperatura superior a los 900 grados.​
-                </p>
-                <p>    
-                    1. Extraer arcilla y prepararla 2. Mezclar de a pocos la arcilla en un recipiente con agua 
-                    3. Cuando la arcilla se haya mezclado con el agua y obtengamos una especie de barro se aplica en 
-                    una pila para que así se filtre y se evapore el agua. 4. Ponemos la arcilla en un molde y dejamos enfriar. 
-                    5. uan vez seca la arcilla se saca cuidadosamente del molde. Las piezas no salen perfectas de estos con lo cual a continuacion
-                    hay que lijarlas. 5. Se pintan con materiales especiales 6. Por ultimo se llevan a un horno especial para cocerlas.
-                </p>
-            </div> 
-        </article>
+        </div>
     </section>
     <section>
-        <article class="articulo2">
-            <div class="tituloart2">
-                <h2 class="titulos" > 
-                    ALFARERÍA
-                </h2>
-            </div>
-            <div class="video2">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/EUdK2dqcCKs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="textoart2">
-                <p>
-                    Alfarería ​ es el arte de elaborar objetos de barro o arcilla y, por extensión, el oficio que ha permitido
-                    al ser humano crear toda clase de enseres y artilugios domésticos a lo largo de la historia.
-                    La Alfareria por su parte es cuestion de moldeado de la arcilla. La diferencia con la ceramica en si
-                    es que se realiza con la utilizacion de una torneta.
-                    Una vez el barro esté completamente limpio, lo pasamos por los molinos añadiéndole agua en función de
-                    las piezas que queramos realizar, dado que cuanto más alta sean las piezas que vamos producir más duro 
-                    debe estar el barro, sino corremos el riesgo de que no se deje trabajar.
-                </p>
-                <p>    
-                    Después, se coloca la peña de barro en el torno y se pasa a la realización de las piezas de forma artesanal.
-                    Conforme se vayan realizando las piezas, se van poniendo a secar de una forma gradual, ya que si el secado 
-                    es muy rápido nos puede llevar a que las piezas agrieten, dado que pierden muy rápido la humedad.
-                    El esmaltado debe ser con cuidado porque la pieza aún está sin cocer con lo cual se corre el riesgo de que rompa al esmaltar.
-                    La cocción está entre las ocho y diez horas de duración y una temperatura aproximada a los 1.000 ºC. Cuando se termina de cocer 
-                    la hornada hay que dejar enfriar las piezas de forma lenta
-                </p>
-            </div>                             
-        </article>              
+        <div class="container">
+            <article class="row">
+                <div >
+                    <h2 class="titulos" > 
+                        ALFARERÍA
+                    </h2>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <p class="textoart">
+                        Alfarería ​ es el arte de elaborar objetos de barro o arcilla.La diferencia con la ceramica en si
+                        es que se realiza con la utilizacion de una torneta.
+                        Una vez el barro esté completamente limpio, lo pasamos por los molinos añadiéndole agua en función de
+                        las piezas que queramos realizar, dado que cuanto más alta sean las piezas que vamos producir más duro 
+                        debe estar el barro, sino corremos el riesgo de que no se deje trabajar.
+                    </p>
+                    <p class="textoart">    
+                        Después, se coloca la peña de barro en el torno, se pasa a la realización de las piezas de forma artesanal.
+                        Conforme se vayan realizando las piezas, se van poniendo a secar de una forma gradual, ya que si el secado 
+                        es muy rápido nos puede llevar a que las piezas agrieten, dado que pierden muy rápido la humedad.
+                        El esmaltado debe ser con cuidado porque la pieza aún está sin cocer con lo cual se corre el riesgo de que rompa al esmaltar.
+                        La cocción está entre las ocho y diez horas de duración y una temperatura aproximada a los 1.000 ºC. Cuando se termina de cocer 
+                        la hornada hay que dejar enfriar las piezas de forma lenta
+                    </p>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/EUdK2dqcCKs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>                             
+            </article>  
+        </div>                 
     </section>
     <footer >
         <div class="container">
