--- a/conocenos.html
+++ b/conocenos.html
@@ -10,24 +10,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="body">
-    <header>
+    <header >
         <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid justify-content-end">
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn btn-outline-secondary" type="submit">Buscar</button>
                 </form>
             </div>
         </nav>
-        <h1 class="tituloprincipal" >
+        <h1 class="tituloprincipal">
             <a class="tituloprincipal" href="index.html"> CERÁMICA DECO </a>
         </h1>
     </header>
-    <nav class="nav">
+    <nav class="nav" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -42,24 +41,25 @@
             </div>
         </div>
     </nav>
-    <section>
-        <div class="contenedorconocenos">
-                <div class="fotoconocenos" >
-                    <img src="fotos/fotoconocenos.jpg" alt="img1" class="fotoconocenos" >
+    <section class="container">
+        <div class="row">
+                <div class="col-md-5 col-sm-12" class="fotoconocenos" >
+                    <img src="fotos/fotoconocenos.jpg" img="imagenconocenos">
                 </div>
-                <div class="textoconocenos" >
-                    <p> 
+                <div class="col-md-1 col-sm-12" > </div>
+                <div class="col-md-6 col-sm-12"  >
+                    <p class="textoconocenos"> 
                         Sandra Lima (58). Durante la secundaria, Sandra cursaba un taller en donde enseguida quedó cautivada 
                         y sorprendida de las formas que lograba con la arcilla a través del torno.
                     </p>
-                    <p>
+                    <p class="textoconocenos">
                         Con el transcurrir del tiempo comenzó a sentir que el proceso de creación en la cerámica tenía 
                         mucha correlación con la vida misma. Esta conexión nos remite a los cinco primeros pasos de la alfarería, 
                         centrar, agujerear, abrir, levantar y darle forma a la arcilla, “De algún modo vamos moldeando nuestra vida,
                         amasamos cada momento, nos centramos, nos abrimos a cosas nuevas, nos levantamos ante situaciones que
                         se nos presentan y terminamos dándole forma a las cosas”, afirma Sandra.
                     </p>
-                    <p>
+                    <p class="textoconocenos">
                         En estos últimos años trabajó arduamente para que en el presente se pudiera formar un nuevo concepto 
                         de negocio donde se fusionen todas sus pasiones, la alfarería, la decoración y la gastronomía, logrando 
                         así un espacio donde podés vivir el MUNDO CERAMICA, aprendiendo alfarería y disfrutando de los sabores
