--- a/contacto.html
+++ b/contacto.html
@@ -10,13 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="body">
     <header>
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
+        <nav class="navbar navbar-light bg-light ">
+            <div class="container-fluid justify-content-end">
                 <form class="d-flex ">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                     <button class="btn btn-outline-secondary" type="submit">Buscar</button>
@@ -63,11 +62,8 @@
                     </form>
                 </div>
             </div>
-            <div class="col-lg-5 col-xs-12" class="contacto">
-                <div> <h3 id="subtitulo"> CONTACTO </h3> </div>
-                <div> Mail: Ceramicasdeco@gmail.com </div>
-                <div> Teléfono: 1138667852 </div>
-                <div> Instagram: Ceramicas.deco </div>
+            <div class="col-lg-5 col-xs-12" >
+                <div> <img src="fotos/imagen8.jpg" alt="imagencontacto" class="contacto"> </div>
             </div>
         </div>         
     </section>
