--- a/conocenos.html
+++ b/conocenos.html
@@ -68,21 +68,24 @@
                 </div>       
         </div>
     </section>
-    <footer >
+    <footer class="footer1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xs-6"> 
-                    <div> <a class="footera" href="contacto.html"> CONTACTO </a>  </div> 
-                    <div> Mail: Ceramicasdeco@gmail.com </div>
-                    <div> Teléfono: 1138667852 </div>
-                    <div> Instagram: Ceramicas.deco </div>
+                    <div> <a class="footerb" href="contacto.html"> CONTACTO </a>  </div> 
+                    <div class="footera"> Mail: Ceramicasdeco@gmail.com </div>
+                    <div class="footera"> Teléfono: 1138667852 </div>
+                    <div class="footera"> Instagram: Ceramicas.deco </div>
                 </div>
                 <div class="col-lg-6 col-xs-6">
-                    <div><a class="footera" href="contacto.html"> DIRECCIÓN </a>   </div> 
-                    <div> Showroom: Av. Santa Fe 530 </div>
+                    <div><a class="footerb" href="contacto.html"> DIRECCIÓN </a>   </div> 
+                    <div class="footera"> Showroom: Av. Santa Fe 530 </div>
                 </div>           
             </div>
-        </div>       
+        </div>
     </footer>
+    <footer class="copyright">
+            <p > Copyright © 2021 CERÁMICA DECO. All Rights Reserved.</p> 
+    </footer> 
 </body>
 </html>
