--- a/conocenos.html
+++ b/conocenos.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Conoce la historia de quien realiza la produccion de piezzas originales de ceramica">
+    <meta name="description" content="Contactanos y buscanos por las redes para conocer mas informacion sobre nuestros productos">
     <meta name="keyword" content="historia, ceramica, presentacion, conocenos, alfareria">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cerámicas | Conocenos</title>
+    <title>Cerámicas | Conocenos </title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel= "stylesheet" href="css/estilos.css">
 </head>
 <body class="body">
     <header >
@@ -26,19 +25,28 @@
             <a class="tituloprincipal" href="index.html"> CERÁMICA DECO </a>
         </h1>
     </header>
-    <nav class="nav" >
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul>
-                        <li><a class="navli" href="index.html">INICIO</a></li>
-                        <li><a class="navli" href="productos.html">PRODUCTOS</a></li>
-                        <li><a class="navli" href="procesocreativo.html">PROCESO CREATIVO</a></li>
-                        <li><a class="navli" href="conocenos.html">CONOCENOS</a></li>
-                        <li><a class="navli" href="contacto.html">CONTACTO</a></li>
-                    </ul>
-                </div>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0 col-12 d-flex justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link" class="navli" href="index.html">INICIO </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" class="navli" href="productos.html">GALERIA</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" class="navli" href="procesocreativo.html">PROCESO CREATIVO</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" class="navli" href="conocenos.html">CONOCENOS <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" class="navli" href="contacto.html">CONTACTO</a>
+                </li>
+            </ul>
         </div>
     </nav>
     <section class="container">
@@ -86,6 +94,13 @@
     </footer>
     <footer class="copyright">
             <p > Copyright © 2021 CERÁMICA DECO. All Rights Reserved.</p> 
-    </footer> 
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
 </body>
 </html>
