--- a/contacto.html
+++ b/contacto.html
@@ -25,18 +25,14 @@
             <a class="tituloprincipal" href="index.html"> CERÁMICA DECO </a>
         </h1>
     </header>
-
-
-
-
     <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 col-12 d-flex justify-content-center">
-                <li class="nav-item">
-                    <a class="nav-link" class="navli" href="index.html">INICIO <span class="sr-only">(current)</span></a>
+                <li class="nav-item" class="navli">
+                    <a class="nav-link"  href="index.html">INICIO <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" class="navli" href="productos.html">GALERIA</a>
@@ -53,9 +49,6 @@
             </ul>
         </div>
     </nav>
-
-
-
     <section class="container">
         <div class="row"> 
             <div class="col-lg-6 col-xs-10">
@@ -101,8 +94,6 @@
     <footer class="copyright">
             <p > Copyright © 2021 CERÁMICA DECO. All Rights Reserved.</p> 
     </footer> 
-    
-    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
