--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <span class="visually-hidden">Next</span>
         </a>
     </div>
-    <section>       
+    <section class="paginaprincipal">       
         <article> 
             <h2 class="titulos"> 
                 NUESTRAS CREACIONES
@@ -88,7 +88,7 @@
                 <img src="fotos/imagen7.jpg" alt="img1" class="imgproductos" >
                 <img src="fotos/imagen10.jpg" alt="img1" class="imgproductos" >
             </div>
-            <button id="botonvermas" class="btn btn-outline-secondary"><a href="productos.html">VER MAS</a></button>
+            <button class="btn btn-outline-secondary"> <a class="botonvermas" href="productos.html"> VER MAS</a></button>
             </div>
         </article>
     </section>
