--- a/conocenos.html
+++ b/conocenos.html
@@ -32,24 +32,24 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 col-12 d-flex justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="index.html">INICIO </a>
+                    <a class="navli" class="nav-link" class="navli" href="index.html">INICIO </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="productos.html">GALERIA</a>
+                    <a class="navli" class="nav-link" class="navli" href="productos.html">GALERIA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="procesocreativo.html">PROCESO CREATIVO</a>
+                    <a class="navli" class="nav-link" class="navli" href="procesocreativo.html">PROCESO CREATIVO</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" class="navli" href="conocenos.html">CONOCENOS <span class="sr-only">(current)</span></a>
+                    <a class="navli" class="nav-link" class="navli" href="conocenos.html">CONOCENOS <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="contacto.html">CONTACTO</a>
+                    <a class="navli" class="nav-link" class="navli" href="contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <section class="container">
+    <section class="container" >
         <div class="row">
                 <div class="col-md-5 col-sm-12" class="fotoconocenos" >
                     <img src="fotos/fotoconocenos.jpg" img="imagenconocenos">
@@ -95,7 +95,6 @@
     <footer class="copyright">
             <p > Copyright © 2021 CERÁMICA DECO. All Rights Reserved.</p> 
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
