--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
             <a href="index.html" class="tituloprincipal"> CERÁMICA DECO </a>
         </h1>
     </header>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light" >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 col-12 d-flex justify-content-center">
                 <li class="nav-item active">
-                    <a class="nav-link" class="navli" href="index.html">INICIO <span class="sr-only">(current)</span></a>
+                    <a class="navli" class="nav-link" class="navli" href="index.html">INICIO <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="productos.html">GALERIA</a>
+                    <a class="navli" class="nav-link" class="navli" href="productos.html">GALERIA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="procesocreativo.html">PROCESO CREATIVO</a>
+                    <a class="navli" class="nav-link" class="navli" href="procesocreativo.html">PROCESO CREATIVO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="conocenos.html">CONOCENOS</a>
+                    <a class="navli" class="nav-link" class="navli" href="conocenos.html">CONOCENOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="contacto.html">CONTACTO</a>
+                    <a class="navli" class="nav-link" class="navli" href="contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </div>
