--- a/productos.html
+++ b/productos.html
@@ -32,19 +32,19 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 col-12 d-flex justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="index.html">INICIO <span class="sr-only">(current)</span></a>
+                    <a class="navli" class="nav-link" class="navli" href="index.html">INICIO <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" class="navli" href="productos.html">GALERIA</a>
+                    <a class="navli" class="nav-link" class="navli" href="productos.html">GALERIA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="procesocreativo.html">PROCESO CREATIVO</a>
+                    <a class="navli" class="nav-link" class="navli" href="procesocreativo.html">PROCESO CREATIVO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="conocenos.html">CONOCENOS</a>
+                    <a class="navli" class="nav-link" class="navli" href="conocenos.html">CONOCENOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" class="navli" href="contacto.html">CONTACTO</a>
+                    <a class="navli" class="nav-link" class="navli" href="contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </div>
