--- a/contacto.html
+++ b/contacto.html
@@ -50,7 +50,7 @@
         </div>
     </nav>
     <section class="container">
-        <div class="row"> 
+        <div class="row my-3"> 
             <div class="col-lg-6 col-xs-10">
                 <div id="form-div">
                     <form class="form">
@@ -70,7 +70,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-lg-5 col-xs-12" >
+            <div class="col-lg-6 col-xs-12 my-5" >
                 <div> <img src="fotos/imagen8.jpg" alt="imagencontacto" class="contacto"> </div>
             </div>
         </div>         
