--- a/conocenos.html
+++ b/conocenos.html
@@ -50,12 +50,11 @@
         </div>
     </nav>
     <section class="container" >
-        <div class="row">
-                <div class="col-md-5 col-sm-12" class="fotoconocenos" >
-                    <img src="fotos/fotoconocenos.jpg" img="imagenconocenos">
+        <div class="row my-5">
+                <div class="col-lg-6 col-xs-12"  >
+                    <img src="fotos/fotoconocenos.jpg" alt="imgconoenos" class="fotoconocenos" >
                 </div>
-                <div class="col-md-1 col-sm-12" > </div>
-                <div class="col-md-6 col-sm-12"  >
+                <div class="col-lg-6 col-xs-12" >
                     <p class="textoconocenos"> 
                         Sandra Lima (58). Durante la secundaria, Sandra cursaba un taller en donde enseguida quedó cautivada 
                         y sorprendida de las formas que lograba con la arcilla a través del torno.
