--- a/procesocreativo.html
+++ b/procesocreativo.html
@@ -93,11 +93,10 @@
                         debe estar el barro, sino corremos el riesgo de que no se deje trabajar.
                     </p>
                     <p class="textoart">    
-                        Después, se coloca la peña de barro en el torno, se pasa a la realización de las piezas de forma artesanal.
                         Conforme se vayan realizando las piezas, se van poniendo a secar de una forma gradual, ya que si el secado 
                         es muy rápido nos puede llevar a que las piezas agrieten, dado que pierden muy rápido la humedad.
-                        El esmaltado debe ser con cuidado porque la pieza aún está sin cocer con lo cual se corre el riesgo de que rompa al esmaltar.
-                        La cocción está entre las ocho y diez horas de duración y una temperatura aproximada a los 1.000 ºC. Cuando se termina de cocer 
+                        El esmaltado debe ser con cuidado porque la pieza aún está sin cocer con lo cual se corre el riesgo de que rompa.
+                        La cocción está entre las ocho horas y a una temperatura aproximada de 1.000 ºC. Cuando se termina de cocer 
                         la hornada hay que dejar enfriar las piezas de forma lenta
                     </p>
                 </div>
