--- a/contacto.html
+++ b/contacto.html
@@ -50,7 +50,7 @@
         </div>
     </nav>
     <section class="container">
-        <div class="row my-3"> 
+        <div class="row my-4"> 
             <div class="col-lg-6 col-xs-10">
                 <div id="form-div">
                     <form class="form">
@@ -75,9 +75,9 @@
             </div>
         </div>         
     </section>
-    <footer class="footer1">
+    <footer>
         <div class="container">
-            <div class="row">
+            <div class="row my-3">
                 <div class="col-lg-6 col-xs-6"> 
                     <div> <a class="footerb" href="contacto.html"> CONTACTO </a>  </div> 
                     <div class="footera"> Mail: Ceramicasdeco@gmail.com </div>
@@ -90,10 +90,10 @@
                 </div>           
             </div>
         </div>
+        <div class="copyright">
+                <p > Copyright © 2021 CERÁMICA DECO. All Rights Reserved.</p> 
+        </div>
     </footer>
-    <footer class="copyright">
-            <p > Copyright © 2021 CERÁMICA DECO. All Rights Reserved.</p> 
-    </footer> 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
