--- a/procesocreativo.html
+++ b/procesocreativo.html
@@ -58,7 +58,7 @@
                         </h2>
                     </div>
                     <div class="col-md-6 col-sm-12"> 
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/IGWbAp4XMic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="100%" height="85%" src="https://www.youtube.com/embed/IGWbAp4XMic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="col-md-6 col-sm-12" >
                         <p class="textoart">
@@ -84,7 +84,7 @@
                         ALFARERÍA
                     </h2>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6 col-xs-12">
                     <p class="textoart">
                         Alfarería ​ es el arte de elaborar objetos de barro o arcilla.La diferencia con la ceramica en si
                         es que se realiza con la utilizacion de una torneta.
@@ -100,8 +100,8 @@
                         la hornada hay que dejar enfriar las piezas de forma lenta
                     </p>
                 </div>
-                <div class="col-md-6 col-sm-12">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/EUdK2dqcCKs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="col-lg-6 col-xs-12">
+                    <iframe width="100%" height="85%"  src="https://www.youtube.com/embed/EUdK2dqcCKs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>                             
             </article>  
         </div>                 
