--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </form>
             </div>
         </nav>
-        <h1 class="tituloprincipal"> 
+        <h1 class="tituloprincipal" class="fondo"> 
             <a href="index.html" class="tituloprincipal"> CERÁMICA DECO </a>
         </h1>
     </header>
